# sumo-scrape

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  monthly.yml
docs/: index.html  review_result.md  spec.md  technical-spec.md
docs/css/: style.css
docs/data/: kimarite_ranking.json  kimarite_trend.json  nanahachi_analysis.json  rikishi_wins.json  star_trading_analysis.json  summary_stats.json  upset_index.json  winning_streaks.json  yokozuna_dominance.json
docs/js/: main.js
docs/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md
scripts/: build_site_data.py  run_local.sh
specifications/: spec.md  technical-spec.md
src/sumodata/: __init__.py  __main__.py  cli.py  fetch.py  io_csv.py  models.py  parse_banzuke.py  parse_results.py  parse_rikishi.py  util.py
tests/: conftest.py  test_fetch.py  test_io_csv.py  test_parse_banzuke.py  test_parse_results.py
tests/fixtures/: banzuke_multi_division.html  banzuke_sample.html  results_kyujo.html  results_multi_division.html  results_no_playoff.html  results_sample.html
