[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumodata"
version = "0.1.0"
description = "SumoDB scraping and CSV generation for sumo bout data"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
sumodata = "sumodata.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sumodata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
